--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,12 @@ dependencies:
   firebase: ^9.0.2
   http: ^0.13.4
   firebase_core: ^1.12.0
-  native_pdf_view: ^5.0.0
   path_provider: ^2.0.8
   syncfusion_flutter_pdfviewer: ^19.4.48-beta
   flip_card: ^0.6.0
+  url_launcher: ^6.0.18 #
+  mailto: ^2.0.0 #
+  auto_size_text: ^3.0.0
 
 dev_dependencies:
   flutter_test:
