--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,9 @@ dependencies:
   path_provider: ^2.0.8
   syncfusion_flutter_pdfviewer: ^19.4.48-beta
   flip_card: ^0.6.0
-  url_launcher: ^6.0.18 #
-  mailto: ^2.0.0 #
+  url_launcher: ^6.0.18
+  mailto: ^2.0.0
+  share_plus: ^3.0.4
   auto_size_text: ^3.0.0
 
 dev_dependencies:
