--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   mailto: ^2.0.0
   share_plus: ^3.0.4
   auto_size_text: ^3.0.0
+  animated_text_kit: ^4.2.1
+  percent_indicator: ^4.0.0
 
 dev_dependencies:
   flutter_test:
