Made the majority website server driven

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,11 @@ dependencies:
   firebase: ^9.0.2
   http: ^0.13.4
   firebase_core: ^1.12.0
+  cloud_firestore: ^3.4.3
   path_provider: ^2.0.8
   syncfusion_flutter_pdfviewer: ^19.4.48-beta
   flip_card: ^0.6.0
+  modal_progress_hud_nsn: ^0.3.0
   url_launcher: ^6.0.18
   mailto: ^2.0.0
   share_plus: ^3.0.4
@@ -37,7 +39,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-    - assets/work/
   fonts:
   - family: GoogleSansRegular
     fonts:
