--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,17 +14,16 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  firebase: ^9.0.2
-  http: ^0.13.4
-  firebase_core: ^1.12.0
-  cloud_firestore: ^3.4.3
+  http: ^1.1.0
+  firebase_core: ^2.14.0
+  cloud_firestore: ^4.8.2
   path_provider: ^2.0.8
-  syncfusion_flutter_pdfviewer: ^20.2.44-beta
-  flip_card: ^0.6.0
-  modal_progress_hud_nsn: ^0.3.0
+  syncfusion_flutter_pdfviewer: ^22.1.38
+  flip_card: ^0.7.0
+  modal_progress_hud_nsn: ^0.4.0
   url_launcher: ^6.0.18
   mailto: ^2.0.0
-  share_plus: ^3.0.4
+  share_plus: ^7.0.2
   auto_size_text: ^3.0.0
   animated_text_kit: ^4.2.1
   percent_indicator: ^4.2.1
